# WeatherPostcast

./: .gitignore  README.md  collect_forecasts.py  debug_sample.xml  geocode_cities.py  pyproject.toml  requirements.txt
.github/workflows/: collect-forecasts.yml  deploy.yml
.kiro/steering/: product.md  structure.md  tech.md
dashboard/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
dashboard/src/: App.tsx  config.ts  index.css
data/: .gitkeep  cities.geojson  locations.json
data/ACT/: Canberra.json
data/NSW/: Alpine Centres.json  Armidale.json  Batemans Bay.json  Bathurst.json  Bega.json  Bowral.json  Broken Hill.json  Canberra.json  Central Coast.json  Cobar.json  Coffs Harbour.json  Cooma.json  Dubbo.json  Gosford.json  Goulburn.json  Grafton.json  Griffith.json  Katoomba.json  Lismore.json  Moree.json  Newcastle.json  Nowra.json  Orange.json  Penrith.json  Port Macquarie.json  Sydney.json  Tamworth.json  Taree.json  Tweed Heads.json  Wagga Wagga.json  Wollongong.json
data/NT/: Alice Springs.json  Darwin.json  Jabiru.json  Katherine.json  Maningrida.json  Nhulunbuy.json  Palmerston.json  Tennant Creek.json  Wadeye.json  Wurrimiyanga.json  Yulara.json
data/QLD/: Birdsville.json  Brisbane.json  Bundaberg.json  Cairns.json  Charleville.json  Charters Towers.json  Emerald.json  Gladstone.json  Gold Coast.json  Goondiwindi.json  (+13 more)
src/: __init__.py  collector.py  config.py  discover_locations.py  file_io.py  ftp_fetcher.py  merger.py  models.py  utils.py  xml_parser.py
tests/: __init__.py  conftest.py
(+452 files in other folders)
